[package]
name = "cultures2-wasm"
version = "0.4.0"
authors = ["Abbas Mashayekh <martianboy2005@gmail.com>"]
edition = "2018"
repository = "https://github.com/martianboy/cultures2-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[dependencies]
wasm-bindgen = "0.2"
image = "0.23"
# js-sys = "0.3.36"

# [dependencies.web-sys]
# version = "0.3"
# features = [ "console" ]  # Do you have this line in your Cargo.toml?

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
# wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.dev]
panic = "unwind"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
